--- a/index.html
+++ b/index.html
@@ -246,6 +246,13 @@
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
 
+       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://gwaher.com/?r=582188">32. Gwaher Faucet</a></h3>
+             <p>$0.0006 every 15 min. PTC, Shortlinks, Offerwalls.</p>
+        <a target="_blank" href="https://gwaher.com/?r=582188" >
+          <img src="/file/gwaher.png" width="468" height="60"/></a><br>
+             <p></p></div>
+
 
 
     </div>
