--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="panels">
   <div class="panel" id="one-panel">
-    <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
+    <h4><font color=red>Bookmark us! All links opens in new tab.</font><br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></h4>
     <p>Join FaucetPay first if you haven't already.</p>
 	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
