--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="panels">
   <div class="panel" id="one-panel">
-    <h4><font color=red>Bookmark us! All links opens in new tab.</font><br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></h4>
+    <h4><font color=red>Bookmark us! All links opens in new tab.<br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></font></h4>
     <p>Join FaucetPay first if you haven't already.</p>
 	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
@@ -258,7 +258,7 @@
     </div>
 
     <div class="panel" id="two-panel">
-      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
+      <h4><font color=red>Bookmark us! All links opens in new tab.<br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></font></h4>
      No shortlink faucets that pays direct to FaucetPay for solving captcha.<p></p>
 
     <div class="w3-container w3-border w3-border-red"> <center> <h4>Bitcoincuba Faucets</h4><p> $0.0005 worth of coins every 1 min</p>
@@ -363,7 +363,7 @@
   </div>
 
   <div class="panel" id="three-panel">
-     <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
+    <h4><font color=red>Bookmark us! All links opens in new tab.<br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></font></h4>
 
      <div class="w3-container w3-border w3-border-red"> <center> <h4> Bitcoin FaucetPay</h4></center>
       <div class="w3-center">
