--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="panels">
   <div class="panel" id="one-panel">
-    <h4><font color=red>Bookmark us! All links opens in new tab.<br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></font></h4>
+    <h4><font color=red>Bookmark us! All links opens in new tab.<br></font></h4>
     <p>Join FaucetPay first if you haven't already.</p>
 	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
@@ -219,7 +219,7 @@
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 	<a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">28. Vie Faucet</a></h3>
-       <p>$0.0004 every 3 mins. Easy captcha.</p>
+       <p>$0.00045 every 3 mins. Easy captcha.</p>
 	<a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>
        <p></p></div>
@@ -246,12 +246,7 @@
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
 
-       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://gwaher.com/?r=582188">32. Gwaher Faucet</a></h3>
-             <p>$0.0006 every 15 min. PTC, Shortlinks, Offerwalls.</p>
-        <a target="_blank" href="https://gwaher.com/?r=582188" >
-          <img src="/file/gwaher.png" width="468" height="60"/></a><br>
-             <p></p></div>
+
 
 
 
