--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://coinkrab.com/refer/user/1799">10. Coinkrab.</a></h3>
-         <p> $0.0006 every 5 mins. $0.05 to FaucetPay</p>
+         <p> $0.00066 every 5 mins. $0.05 to FaucetPay</p>
          <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
         <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
          </div>
@@ -249,7 +249,7 @@
     </div>
 
     <div class="panel" id="two-panel">
-      <h4><font color=red>Bookmark us! All links opens in new tab.<br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></font></h4>
+      <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
      No shortlink faucets that pays direct to FaucetPay for solving captcha.<p></p>
 
     <div class="w3-container w3-border w3-border-red"> <center> <h4>Bitcoincuba Faucets</h4><p> $0.0005 worth of coins every 1 min</p>
@@ -361,17 +361,14 @@
   </div>
 
   <div class="panel" id="three-panel">
-    <h4><font color=red>Bookmark us! All links opens in new tab.<br><a href="https://twitter.com/da_cryptoguru">For quicker updates about Faucets, Coupon code, Happy hours and other offers, join our Twitter handle Crypto Guru.</a></font></h4>
+    <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
 
      <div class="w3-container w3-border w3-border-red"> <center> <h4> Bitcoin FaucetPay</h4></center>
       <div class="w3-center">
-        <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesolana 4+ sats 2 mins</a>
-       <p></p>
-    <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesol 4+ sats 5 mins</a><p></p>
-    <a href="https://btcfaucet.x10.bz?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Btc x10 3 sats 1 min</a><p></p>
+        <a href="https://purebtc.xyz/btc/fp/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">PureBTC 5 sats 1 min</a><p></p>
+        <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesolana 3+ sats 2 mins</a><p></p>
+    <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesol 3+ sats 5 mins</a><p></p>
     <a href="https://receh.win/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Receh 3 sats 3 mins</a><p></p>
-    <a href="https://coinkong.site/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Coinkong 3 sats 1 min</a><p></p>
-    <a href="https://faucetpoint.net?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Faucet point 3 sats 1 min</a><p></p>
 
       </div></div><p></p>
 
