--- a/index.html
+++ b/index.html
@@ -270,18 +270,18 @@
       <div class="w3-bar">
     <a href="https://cryptorotator.website/ltc_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a>
     <a href="https://cryptorotator.website/trx_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Tron</a>
-    <a href="https://cryptorotator.website/gameplay_eth/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
+    <a href="https://cryptorotator.website/eth_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
     <a href="https://cryptorotator.website/doge_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
-    <a href="https://cryptorotator.website/gameplay_bch/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a>
+    <a href="https://cryptorotator.website/bch_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a>
     <a href="https://cryptorotator.website/dgb_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Digibyte</a>
-    <a href="https://cryptorotator.website/gameplay_zec/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Zcash</a>
-    <a href="https://cryptorotator.website/gameplay_dash/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dash</a>
-    <a href="https://cryptorotator.website/shine_ltc/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Litecoin 2</a>
+    <a href="https://cryptorotator.website/zec_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Zcash</a>
+    <a href="https://cryptorotator.website/dash_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dash</a>
+    <a href="https://cryptorotator.website/shine_ltc/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Litecoin2</a>
     <a href="https://cryptorotator.website/shine_trx/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Tron 2</a>
-    <a href="https://cryptorotator.website/shine_eth/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum 2</a>
-    <a href="https://cryptorotator.website/shine_doge/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Dogecoin 2</a><p></p>
-    <a href="https://cryptorotator.website/shine_bch/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash 2</a>
-    <a href="https://cryptorotator.website/shine_dgb/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Digibyte 2</a>
+    <a href="https://cryptorotator.website/shine_eth/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum2</a>
+    <a href="https://cryptorotator.website/shine_doge/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Dogecoin2</a><p></p>
+    <a href="https://cryptorotator.website/shine_bch/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash2</a>
+    <a href="https://cryptorotator.website/shine_dgb/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Digibyte2</a>
     <a href="https://cryptorotator.website/shine_zec/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Zcash 2</a>
     <a href="https://cryptorotator.website/shine_dash/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dash 2</a>
     </center><p></p></div>
