--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <a href="https://cryptorotator.website/bch_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a>
     <a href="https://cryptorotator.website/dgb_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Digibyte</a>
     <a href="https://cryptorotator.website/zec_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Zcash</a>
-    <a href="https://cryptorotator.website/dash_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dash</a>
+    <a href="https://cryptorotator.website/dash_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dash</a><p></p>
     <a href="https://cryptorotator.website/shine_ltc/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Litecoin2</a>
     <a href="https://cryptorotator.website/shine_trx/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Tron 2</a>
     <a href="https://cryptorotator.website/shine_eth/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum2</a>
@@ -417,7 +417,8 @@
                     <div class="w3-center">
                       <a href="https://janads.com?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:60%">janads $0.002 2 mins</a><p></p>
                       <a href="https://free-usdt.xyz?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">FreeUSDT $0.0018 1 min</a><p></p>
-                           </div></div><p></p>
+                      <a href="https://here-crypto.com/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">Herecrypto $0.0011 5 mins</a><p></p>
+                     </div></div><p></p>
 
     </div>
   </div>
