--- a/index.html
+++ b/index.html
@@ -446,9 +446,16 @@
 ></iframe><br>
 <p>ccz.one @ 2021-2022</p><br>
 </center>
-<script async src="//static.getclicky.com/101351040.js"></script>
-
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PLYLYN29RX"></script>
 <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PLYLYN29RX');
+</script>
+
   //Get the button
   var mybutton = document.getElementById("myBtn");
 
