--- a/index.html
+++ b/index.html
@@ -455,8 +455,7 @@
 
   gtag('config', 'G-PLYLYN29RX');
 </script>
-
-  //Get the button
+<script>  //Get the button
   var mybutton = document.getElementById("myBtn");
 
   // When the user scrolls down 20px from the top of the document, show the button
