--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <input class="radio" id="two" name="group" type="radio">
   <input class="radio" id="three" name="group" type="radio">
   <div class="tabs">
-  <label class="tab" id="one-tab" for="one">Top 30 Faucets</label>
+  <label class="tab" id="one-tab" for="one">Top 35 Faucets</label>
   <label class="tab" id="two-tab" for="two">No Shortlink Faucets</label>
   <label class="tab" id="three-tab" for="three">Shortlink Faucets</label>
 </div>
@@ -237,14 +237,43 @@
 
                     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 	<a href="https://coincet.com/?r=30824">30. Coincet</a></h3>
-       <p>$0.0004 every 1 min. PTC, Shortlinks, Offerwalls.</p>
+       <p>$0.00045 every 2 mins. PTC, Shortlinks, Offerwalls.</p>
 	<a target="_blank" href="https://coincet.com/?r=30824" >
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
 
+       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://www.bytecash.in/?r=5691">31. Bytecash</a></h3>
+        <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
+        <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
+        <p></p></div>
 
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+          <a href="https://btcbunch.com/?r=81391">32. BTC bunch</a></h3>
+                     <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
+          <a target="_blank" href="https://btcbunch.com/?r=81391" >
+            <img src="/file/bunch.png" width="468" height="60"/></a><br>
+                     <p></p></div>
 
+                     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+                      <a href="https://vivocoin.com/?r=3156">33. Vivo Coin Faucet</a></h3>
+                                 <p>$0.0006 every 30 mins. shortliks, ptc, offerwalls. $0.0001 to FaucetPay.</p>
+                      <a target="_blank" href="https://vivocoin.com/?r=3156" >
+                        <img src="/file/vivo.png" width="468" height="60"/></a><br>
+                                 <p></p></div>
 
+  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+  <a href="https://freecryptoss.com/?r=3707">34. Free Crypto</a></h3>
+   <p>$0.00045 every 3 mins. shortliks, ptc, offerwalls. Recaptcha V3.</p>
+   <a target="_blank" href="https://freecryptoss.com/?r=3707" >
+    <img src="/file/freecrypto.png" width="468" height="60"/></a><br><p></p></div>
+
+                     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+                      <a href="https://rollercoin.com/?r=juwv6dm0">33. BTC bunch</a></h3>
+                                 <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
+                      <a target="_blank" href="https://rollercoin.com/?r=juwv6dm0" >
+                        <img src="/file/roller.gif" width="468" height="60"/></a><br>
+                                 <p></p></div>
 
     </div>
 
