--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
 
      <div class="w3-container w3-border w3-border-red"> <center> <h4> Bitcoin FaucetPay</h4></center>
       <div class="w3-center">
+        <a href="http://btc.freecluster.eu/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freecluster 5+ sats 1 min</a><p></p>
         <a href="https://purebtc.xyz/btc/fp/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">PureBTC 5 sats 1 min</a><p></p>
         <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesolana 3+ sats 2 mins</a><p></p>
     <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesol 3+ sats 5 mins</a><p></p>
