--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
 
-   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href=" https://multicoins.net/?r=74750">5. Multicoins</a></h3>
-    <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
-      <a target="_blank" href=" https://multicoins.net/?r=74750"><img src="/file/mcoins.png" width="468" height="60"></a><p></p></div>
+   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+    <a href="https://fire-crypto.net/?ref=2411">5. Fire-crypto.net</a></h3><p>$0.0005 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
+    <a target="_blank" href="https://fire-crypto.net/?ref=2411" >
+    <img src="/file/fcnet.png" width="468" height="60"/></a><br>
+     <p></p> </div>
+
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
         <a href="https://coinadster.com/?ref=208315">6. Coinadster</a></h3>
@@ -72,59 +74,66 @@
         <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a>
                          <p></p></div>
 
-        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-          <a href="https://bitcoincyclone.com/?r=3177">7. Bitcoin Cyclone</a></h3>
-          <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
-          <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
-          <p></p></div>
+
+                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+                          <a href="https://r.adbtc.top/7297">7. Adbtc.top</a></h3>
+                          <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
+                          <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
+                          <p></p></div>
+
+                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+                          <a href="https://cryptowin.io/ref/tsaroz">8. Cryptowin.io</a></h3>
+                          <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
+                          <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
+                          <p></p></div>
+
+                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+                            <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">9. Vie Faucet</a></h3>
+                                 <p>$0.00045 every 3 mins. Easy captcha.</p>
+                            <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
+                              <img src="/file/vie.png" width="468" height="60"/></a><br>
+                                 <p></p></div>
 
           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-            <a href="https://claimercorner.xyz/claimer/?r=29003">8. Claimers corner</a></h3>
+            <a href="https://claimercorner.xyz/claimer/?r=29003">10. Claimers corner</a></h3>
             <p> $0.0007 every 5 mins. $0.001 to FaucetPay.</p>
             <a href="https://claimercorner.xyz/claimer/?r=29003"  target="_blank" >
             <img src="/file/cc.png" alt= "Claimerscorner" width="468" height="60"><br></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-     <a href="https://bitcointrophy.com/?r=21954">9. Bitcoin Trophy</a></h3>
+     <a href="https://bitcointrophy.com/?r=21954">11. Bitcoin Trophy</a></h3>
        <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
        <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://coinkrab.com/refer/user/1799">10. Coinkrab.</a></h3>
+        <a href=" https://multicoins.net/?r=74750">12. Multicoins</a></h3>
+        <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
+          <a target="_blank" href=" https://multicoins.net/?r=74750"><img src="/file/mcoins.png" width="468" height="60"></a><p></p></div>
+
+          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
+            <a href="https://bitcoincyclone.com/?r=3177">13. Bitcoin Cyclone</a></h3>
+            <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
+            <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
+            <p></p></div>
+
+       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://coinkrab.com/refer/user/1799">14. Coinkrab.</a></h3>
          <p> $0.00066 every 5 mins. $0.05 to FaucetPay</p>
          <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
         <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
          </div>
 
-         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-          <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">11. Vie Faucet</a></h3>
-               <p>$0.00045 every 3 mins. Easy captcha.</p>
-          <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
-            <img src="/file/vie.png" width="468" height="60"/></a><br>
-               <p></p></div>
 
-
-  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-  <a href="https://r.adbtc.top/7297">12. Adbtc.top</a></h3>
-  <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
-  <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
-  <p></p></div>
-
-  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-  <a href="https://cryptowin.io/ref/tsaroz">13. Cryptowin.io</a></h3>
-  <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
-  <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
-  <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">14. Final Dutchy</a></h3>
+	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">15. Final Dutchy</a></h3>
       <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://faucetcrypto.com/ref/51422">15. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">16. FaucetCrypto</a></h3>
         <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
@@ -132,22 +141,22 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://fire-crypto.com/?r=13264">16. FireCrypto</a></h3>
-     <p>$0.001 every 15 min. High reward Shortlinks, Offerwalls. $0.01 withdrawal to FaucetPay.</p>
+    <a href="https://fire-crypto.com/?r=13264">17. FireCrypto</a></h3>
+     <p>$0.0005 every 5 mins. High reward Shortlinks, Offerwalls. $0.001 withdrawal to FaucetPay.</p>
      <a target="_blank" href="https://fire-crypto.com/?r=13264" >
                       <img src="/file/Firecrypto.gif" width="468" height="60"/></a><br>
                       <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-  <a href="https://dinntoks.com/?r=8182">17. Dinntoks</a></h3>
+  <a href="https://dinntoks.com/?r=8182">18. Dinntoks</a></h3>
   <p>$0.0005 every 5 mins. PTC, Shortlinks. $0.01 to Faucetpay.</p>
    <a target="_blank" href="https://dinntoks.com/?r=8182"><img src="/file/dinn.png" width="468" height="60"></a>
    <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://bitsfree.net/?r=96452">18. Bitsfree</a></h3>
+	<a href="https://bitsfree.net/?r=96452">19. Bitsfree</a></h3>
    <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://bitsfree.net/?r=96452"><img src="/file/BitsFree.png" width="468" height="60"></a>
  <p></p></div>
@@ -155,7 +164,7 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://pipeflare.io/r/22uo">19. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">20. Pipeflare</a></h3>
        <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>
@@ -165,41 +174,41 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://freebitco.in/?r=5188579">20. Freebitco.in</a></h3>
+    <a href="https://freebitco.in/?r=5188579">21. Freebitco.in</a></h3>
     <p> $0.0002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
   </div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-<a href="https://firefaucet.win/ref/27478">21. Fire Faucet</a></h3>
+<a href="https://firefaucet.win/ref/27478">22. Fire Faucet</a></h3>
     <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls. Happy hour bonus on weekends.</p>
 <a href="https://firefaucet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://click4bit.com/?ref=14312">22. Click4bit</a></h3>
+      <a href="https://click4bit.com/?ref=14312">23. Click4bit</a></h3>
       <p>$0.0006 every 5 mins. Solvemedia. PTC, Shortlinks, Offerwalls. $0.06 to Faucetpay</p>
         <a target="_blank" href="https://click4bit.com/?ref=14312"><img src="/file/click4.png" width="468" height="60"></a><p></p></div>
 
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://simplebits.io/ref/n9Z908pvlxST">23. Simplebits</a></h3>
+    <a href="https://simplebits.io/ref/n9Z908pvlxST">24. Simplebits</a></h3>
           <p>30 min faucet. Gamified mining. A bit hard to learn easy to earn.</p>
     <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
       <img src="/file/simple.gif" width="468" height="60"/></a><br>
       <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">24. Cointiply</a></h3>
+	<a href="http://cointiply.com/r/Jx6Kp">25. Cointiply</a></h3>
         <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
     <img src="/file/cply1.gif" width="468" height="60"/></a><br>
   <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://satoshihero.com/en/register?r=j2337039">25. Satoshi Hero</a></h3>
+	<a href="https://satoshihero.com/en/register?r=j2337039">26. Satoshi Hero</a></h3>
             <p>3+ sats every 30 mins. Offerwalls</p>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
     <img src="/file/shero.jpeg" width="468" height="60"/></a><br>
@@ -207,14 +216,14 @@
 
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-              <a href="https://gpfaucet.com/?r=11674">26. GPfaucet</a></h3>
+              <a href="https://gpfaucet.com/?r=11674">27. GPfaucet</a></h3>
                          <p>$0.0005 every 3 min faucet. shortliks, ptc, offerwalls. Minimum $0.001 to FaucetPay</p>
               <a target="_blank" href="https://gpfaucet.com/?r=11674" >
                 <img src="/file/gp.png" width="468" height="60"/></a><br>
                          <p></p></div>
 
                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                          <a href="https://cripto.win/?r=63305">27. Cripto.win</a></h3>
+                          <a href="https://cripto.win/?r=63305">28. Cripto.win</a></h3>
                           <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.5 withdrawal to FaucetPay.</p>
                            <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
 
@@ -222,60 +231,60 @@
 
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.coinpayu.com/?r=tsaroz">28. CoinpayU</a></h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">29. CoinpayU</a></h3>
              <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
         <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
           <img src="/file/payu.gif" width="468" height="60"/></a><br>
              <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-              <a href="https://autofaucet.org/r/tsaroz">29. Autofaucet</a></h3>
+              <a href="https://autofaucet.org/r/tsaroz">30. Autofaucet</a></h3>
                    <p>Highest paying shortlins. Withdraw to Faucetpay.</p>
               <a target="_blank" href="https://autofaucet.org/r/tsaroz" >
                 <img src="/file/autofau.png" width="468" height="60"/></a><br>
                    <p></p></div>
 
                     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://coincet.com/?r=30824">30. Coincet</a></h3>
+	<a href="https://coincet.com/?r=30824">31. Coincet</a></h3>
        <p>$0.00045 every 2 mins. PTC, Shortlinks, Offerwalls.</p>
 	<a target="_blank" href="https://coincet.com/?r=30824" >
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.bytecash.in/?r=5691">31. Bytecash</a></h3>
+        <a href="https://www.bytecash.in/?r=5691">32. Bytecash</a></h3>
         <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
         <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
         <p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://btcbunch.com/?r=81391">32. BTC bunch</a></h3>
+          <a href="https://btcbunch.com/?r=81391">33. BTC bunch</a></h3>
                      <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
           <a target="_blank" href="https://btcbunch.com/?r=81391" >
             <img src="/file/bunch.png" width="468" height="60"/></a><br>
                      <p></p></div>
 
                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                      <a href="https://vivocoin.com/?r=3156">33. Vivo Coin Faucet</a></h3>
+                      <a href="https://vivocoin.com/?r=3156">34. Vivo Coin Faucet</a></h3>
                                  <p>$0.0006 every 30 mins. shortliks, ptc, offerwalls. $0.0001 to FaucetPay.</p>
                       <a target="_blank" href="https://vivocoin.com/?r=3156" >
                         <img src="/file/vivo.png" width="468" height="60"/></a><br>
                                  <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://freecryptoss.com/?r=3707">34. Free Crypto</a></h3>
+  <a href="https://freecryptoss.com/?r=3707">35. Free Crypto</a></h3>
    <p>$0.00045 every 3 mins. shortliks, ptc, offerwalls. Recaptcha V3.</p>
    <a target="_blank" href="https://freecryptoss.com/?r=3707" >
     <img src="/file/freecrypto.png" width="468" height="60"/></a><br><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-      <a href="https://tron-free.com/?r=89595">35. Tron Free</a></h3>
+      <a href="https://tron-free.com/?r=89595">36. Tron Free</a></h3>
        <p>$0.0005 every 5 mins. shortliks, PTC, offerwalls. </p>
        <a target="_blank" href="https://tron-free.com/?r=89595" >
         <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                      <a href="https://rollercoin.com/?r=juwv6dm0">36. Rollercoin</a></h3>
+                      <a href="https://rollercoin.com/?r=juwv6dm0">37. Rollercoin</a></h3>
                                  <p>Play games, earn coins passively.</p>
                       <a target="_blank" href="https://rollercoin.com/?r=juwv6dm0" >
                         <img src="/file/roller.gif" width="468" height="60"/></a><br>
