--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
     <a href="https://cryptosats.net/?r=11112">5. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
     <a target="_blank" href="https://cryptosats.net/?r=11112" >
-    <img src="/file/cryptosa.jpg" width="468" height="60"/></a><br>
+    <img src="/file/cryptosa.png" width="468" height="60"/></a><br>
      <p></p> </div>
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
