--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-<a href="https://coinpot.in/?r=135650">2. Coinpot.in (x2 reward for next 48 hours for anniversary)</a></h3>
+<a href="https://coinpot.in/?r=135650">2. Coinpot.in</a></h3>
 <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
 <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
 <p></p></div>
