--- a/index.html
+++ b/index.html
@@ -493,23 +493,8 @@
 <center><p><mark><a href="https://forms.gle/yDUq218tsSH36Cey9"> For questions, complaints, suggestions and requests, contact me by clicking here.</a></mark></p>
 <p>Sponsored Ad:</p>
  <iframe data-aa='1913695' src='//ad.a-ads.com/1913695?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe><br>
- <iframe
- src="https://viewm.moonicorn.network/#%7B%22options%22%3A%7B%22publisherAddr%22%3A%220xAcEb22810deDaE89c8043d2aFcdFAA2B28596241%22%2C%22whitelistedTokens%22%3A%5B%220x6B175474E89094C44Da98b954EedeAC495271d0F%22%5D%2C%22whitelistedType%22%3A%22legacy_468x60%22%2C%22randomize%22%3Atrue%2C%22targeting%22%3A%5B%5D%2C%22width%22%3A%22468%22%2C%22height%22%3A%2260%22%2C%22minPerImpression%22%3A%220%22%2C%22fallbackUnit%22%3Anull%2C%22marketSlot%22%3A%22QmeidGXbt2N1jLbzw2M7kcCeBkL2G5yPEJQEtCzqF2F1nY%22%7D%7D"
- width="468"
- height="60"
- scrolling="no"
- frameborder="0"
- style="border: 0;"
- onload="window.addEventListener('message', function(ev) {
-   if (ev.data.hasOwnProperty('adexHeight') && ('https://viewm.moonicorn.network' === ev.origin)) {
-     for (let f of document.getElementsByTagName('iframe')) {
-       if (f.contentWindow === ev.source) {
-         f.height = ev.data.adexHeight;
-       }
-     }
-   }
- }, false)"
-></iframe><br>
+ <a href="https://rotate5url.com/user/register.php?ref=tsaroz"  target="_blank" >
+  <img src="/file/rotate5.png" alt= "fpay" width="468" height="60">  </a><br>
 <p>ccz.one @ 2021-2022</p><br>
 </center>
 <!-- Global site tag (gtag.js) - Google Analytics -->
