--- a/index.html
+++ b/index.html
@@ -493,8 +493,14 @@
 <center><p><mark><a href="https://forms.gle/yDUq218tsSH36Cey9"> For questions, complaints, suggestions and requests, contact me by clicking here.</a></mark></p>
 <p>Sponsored Ad:</p>
  <iframe data-aa='1913695' src='//ad.a-ads.com/1913695?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe><br>
- <a href="https://rotate5url.com/user/register.php?ref=tsaroz"  target="_blank" >
-  <img src="/file/rotate5.png" alt= "fpay" width="468" height="60">  </a><br>
+ <script type="text/javascript" src="https://www.gstatic.com/swiffy/v7.4/runtime.js"></script>
+<script type="text/javascript" src="https://www.bestchange.com/images/banners/468x60-12.js"></script>
+<a target="_blank" href="https://www.bestchange.com/?p=1258411" title="E-money exchange rating &ndash; BestChange"><span id="hZDrri3teyeANyyteetT" style="display: inline-block; width: 468px; height: 60px; background-color: #89b508; margin: 0; padding: 0; border: none; overflow: hidden" onclick="return false"></span></a>
+<script type="text/javascript">
+var stage = new swiffy.Stage(document.getElementById('hZDrri3teyeANyyteetT'), swiffyobject, {});
+stage.setFlashVars('clickTAG=https://www.bestchange.com/?p=1258411');
+stage.start();
+</script><br>
 <p>ccz.one @ 2021-2022</p><br>
 </center>
 <!-- Global site tag (gtag.js) - Google Analytics -->
