--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
                                  <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://freecryptoss.com/?r=3707">37. Free Crypto</a></h3>
-   <p>$0.00045 every 3 mins. shortliks, ptc, offerwalls. Recaptcha V3.</p>
-   <a target="_blank" href="https://freecryptoss.com/?r=3707" >
-    <img src="/file/freecrypto.png" width="468" height="60"/></a><br><p></p></div>
+  <a href="https://mixfaucet.com/?r=60837">37. Mix Faucet</a></h3>
+   <p>$0.0005 every 5 mins. shortliks, ptc, offerwalls. $0.05 to Faucetpay.</p>
+   <a target="_blank" href="https://mixfaucet.com/?r=60837" >
+    <img src="/file/mix.gif" width="468" height="60"/></a><br><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
       <a href="https://tron-free.com/?r=89595">38. Tron Free</a></h3>
