--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 <a href="https://coinpayz.xyz/?r=155318">2. Coinpayz</a></h3>
-<p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls.</p>
+<p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.01 to FaucetPay.</p>
 <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
@@ -189,7 +189,7 @@
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
     <a href="https://freebitco.in/?r=5188579">23. Freebitco.in</a></h3>
-    <p> $0.0002+ worth of bitcoin every hour. No Ads.</p>
+    <p> $0.002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
   </div>
