--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
 
      <div class="w3-container w3-border w3-border-red"> <center> <h4> Bitcoin FaucetPay</h4></center>
       <div class="w3-center">
-        <a href="https://purebtc.xyz/btc/fp/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">PureBTC 5 sats 1 min</a><p></p>
+        <a href="https://purebtc.xyz/btc/fp/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">PureBTC 3 sats 1 min</a><p></p>
         <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesolana 3+ sats 2 mins</a><p></p>
-    <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesol 3+ sats 5 mins</a><p></p>
+    <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesol 3+ sats 2 mins</a><p></p>
     <a href="https://receh.win/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Receh 3 sats 3 mins</a><p></p>
 
       </div></div><p></p>
@@ -420,12 +420,12 @@
 
      <div class="w3-container w3-border w3-border-red"> <center> <h4> Solana FaucetPay</h4></center>
     <div class="w3-center">
-  <a href="https://freesol.biz/freesolana?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Freesol $0.0015 2 mins</a><p></p>
-  <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Litefaucet $0.00225 1 min</a><p></p>
-  <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Extra Crypto $0.0014 1 min</a><p></p>
+  <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Litefaucet $0.002 1 min</a><p></p>
+  <a href="https://karimunbits.net/solana?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Karimunbits $0.0012 sol 1 min</a><p></p>
   <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Ole faucet $0.00145 3 mins</a><p></p>
-  <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Freesolana $0.002 3 mins</a><p></p>
-   <a href="https://claim4free.ga/sol/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Claim4free $0.0012 5 mins</a><p></p>
+  <a href="https://freesol.biz/freesolana?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Freesol 1500 sol 2 mins</a><p></p>
+  <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Extra Crypto 1200+ sol 1 min</a><p></p>
+  <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Freesolana 1300+ sol 2 mins</a><p></p>
     </div></div><p></p>
 
     <div class="w3-container w3-border w3-border-red"> <center> <h4> Litecoin FaucetPay </h4> </center>
