--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@
         <a href="https://purebtc.xyz/btc/fp/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">PureBTC 3 sats 1 min</a><p></p>
         <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesolana 3+ sats 2 mins</a><p></p>
     <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesol 3+ sats 2 mins</a><p></p>
-    <a href="https://receh.win/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Receh 3 sats 3 mins</a><p></p>
+    <a href="https://safbits.com?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Safbits 3 sats 1 min</a><p></p>
+    <a href="https://receh.win/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Receh 3 sats 3 mins</a><p></p>
 
       </div></div><p></p>
 
