--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <p></p> </div>
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://beerfaucet.io/?ref=14546">6. Beerfaucet</a></h3><p>$0.0005 every 2 mins. Solvemedia. $0.01 withdrawal to Faucetpay. </p>
+    <a href="https://beerfaucet.io/?ref=14546">6. Beerfaucet</a></h3><p>$0.0005 every 2 mins. Solvemedia. 2500 sats to Faucetpay. </p>
     <a target="_blank" href="https://beerfaucet.io/?ref=14546" >
     <img src="/file/beer.png" width="468" height="60"/></a><br>
      <p></p> </div>
